edit index page

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
                 <li class="group">
                   <a href="#clients" class="nav-links">Klien</a>
                 </li>
-                <li class="group">
+                <!-- <li class="group">
                   <a href="#blog" class="nav-links">Blog</a>
-                </li>
+                </li> -->
                 <li class="group">
                   <a href="#contact" class="nav-links">Kontak</a>
                 </li>
@@ -78,11 +78,12 @@
                 Renaldy Naufal Tsabitul Azmi
               </span>
             </h1>
-            <h2 class="font-medium text-lg mt-1 mb-5 text-primary lg:text-2xl">
+            <h2 class="font-medium text-lg mt-1 mb-3 text-primary lg:text-2xl">
               Fullstack Web Developer
             </h2>
             <p class="font-medium text-secondary mb-9 leading-relaxed">
-              Ini adalah web portofolio
+              Web ini merupakan web portofolio <br />yang saya buat menggunakan
+              TailwindCSS
             </p>
             <a
               href="#"
@@ -217,8 +218,7 @@
               Projek terbaru
             </h2>
             <p class="font-medium text-md text-secondary">
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Officia,
-              culpa.
+              Berikut ini adalah beberapa projek yg sudah saya kembangkan.
             </p>
           </div>
         </div>
@@ -228,40 +228,40 @@
           <div class="mb-2 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img
-                src="src/img/portfolio/anastasiya-osichkina-leblancrgb-color-fin2.jpg"
-                alt="Project 1"
+                src="src/img/project/projek-eneergeek.png"
+                alt="Project Energeek"
                 width="w-full"
               />
             </div>
             <div class="px-4 pb-5">
               <h3 class="font-semibold text-xl text-limes mt-5 mb-3">
-                Project 1
+                Projek Energeek
               </h3>
               <p class="font-medium text-base text-secondary">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Consequuntur, fugit?
+                Website yang menyediakan fitur mengelola Lamaran secara online
+                berbasis framework Laravel, dan Bootstrap 5.
               </p>
             </div>
           </div>
           <div class="mb-2 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img
-                src="src/img/portfolio/anastasiya-osichkina-leblancrgb-color-fin2.jpg"
-                alt="Project 2"
+                src="src/img/project/project2-wandering-diary.png"
+                alt="Project WanderingDiary"
                 width="w-full"
               />
             </div>
             <div class="px-4 pb-5">
               <h3 class="font-semibold text-xl text-limes mt-5 mb-3">
-                Project 2
+                Project Wandering-Diary
               </h3>
               <p class="font-medium text-base text-secondary">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Consequuntur, fugit?
+                Web yang menyediakan user untuk mengelola sebuah diary secara
+                online berbasis framework Laravel, dan TailwindCSS.
               </p>
             </div>
           </div>
-          <div class="mb-2 p-4 md:w-1/2">
+          <!-- <div class="mb-2 p-4 md:w-1/2">
             <div class="rounded-md shadow-md overflow-hidden">
               <img
                 src="src/img/portfolio/logo_pink2.png"
@@ -296,7 +296,7 @@
                 Consequuntur, fugit?
               </p>
             </div>
-          </div>
+          </div> -->
         </div>
       </div>
     </section>
@@ -338,7 +338,7 @@
     <!-- Client End -->
 
     <!-- Blog Start -->
-    <section id="blog" class="pt-32 pb-28 bg-lime-50">
+    <!-- <section id="blog" class="pt-32 pb-28 bg-lime-50">
       <div class="container">
         <div class="w-full px-4">
           <div class="max-w-xl mx-auto text-center mb-10">
@@ -450,7 +450,7 @@
           </div>
         </div>
       </div>
-    </section>
+    </section> -->
     <!-- Blog End -->
 
     <!-- Contact Start -->
@@ -557,14 +557,14 @@
               Klien
             </a>
           </div>
-          <div class="px-5 py-2">
+          <!-- <div class="px-5 py-2">
             <a
               href="#blog"
               class="text-base leading-6 text-gray-500 hover:text-primary"
             >
               Blog
             </a>
-          </div>
+          </div> -->
           <div class="px-5 py-2">
             <a
               href="#contact"
