edit profile pic

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
           <div class="w-full self-end px-4 lg:w-1/2">
             <div class="relative mt-10 lg:mt-9 lg:right-0">
               <img
-                src="src/img/avatar.png"
+                width="250"
+                height="250"
+                src="src/img/FotoProfil-removebg.png"
                 alt="avatar"
                 class="max-w-full mx-auto relative z-10"
               />
